--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -10591,15 +10591,20 @@ ul.benifits-col li i {
   font-size: 16px;
   font-weight: 600;
 }
-.contact-form {
-  height: 700px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .contact-form .section-header {
   margin-bottom: 50px;
 }
+
+.contact-form .section-header h2::after {
+  content: "";
+  border-bottom: 2px solid #7dcbeb;
+  width: 300px;
+  display: block;
+  margin-left: 500px;
+  margin-top: 10px;
+}
+
 .contact-form form {
   background: #fff;
   border-radius: 8px;
