--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,6 +24,33 @@ ul {
   list-style-type: none;
 }
 
+/* Scrollbar Customization Start */
+html::-webkit-scrollbar {
+  width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+  background: rgb(179, 177, 177);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: rgb(136, 136, 136);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background: rgb(100, 100, 100);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:active {
+  background: rgb(68, 68, 68);
+  border-radius: 10px;
+}
+
+/* Scrollbar Customization End */
+
 .btn-primary {
   background-color: #09e5ab;
   border: 1px solid #09e5ab;
