--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3128,3 +3128,14 @@ span.hospital-con-info-span {
 .bg-custom-info {
   background-color: #0dcaf0;
 }
+
+/* Table Delete Icon */
+.delete-table-icon button {
+  background-color: #f1151c4d;
+  color: #e84646;
+}
+
+.delete-table-icon button:hover {
+  background-color: #d50000;
+  color: white;
+}
