--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1555,10 +1555,6 @@ html::-webkit-scrollbar-thumb:active {
 }
 
 .section-banner {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: start;
   height: 65vh;
   background-size: cover;
 }
@@ -3165,6 +3161,11 @@ i.bg-poly-icon {
 
 .poly_details_doctor {
   padding: 50px 0;
+}
+
+.poly-section2 {
+  background-color: #000b48d9;
+  color: white;
 }
 
 /* Polyclinic End */
