--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -24,12 +24,10 @@ ul {
   list-style-type: none;
 }
 
-.admin_page {
-  background-image: url(../images/png-plus.png), url(../images/png-plus2.png);
-  background-position: left bottom, right top;
-  background-repeat: no-repeat, no-repeat;
+/* .admin_page {
+  background: url();
   height: 94vh;
-}
+} */
 
 @media screen and (max-width: 600px) {
   .admin_page {
@@ -113,16 +111,17 @@ ul {
 }
 
 .admin_page .card_list .card-item {
-  width: 320px;
+  width: 315px;
+  height: 440px;
 }
 
-.admin_page .card_list .card-inner {
+/* .admin_page .card_list .card-inner {
   border: 10px solid #0d6efd;
   padding: 10px;
   border-radius: 5px;
   -webkit-box-shadow: 0px 0px 15px 1px #0d6efd;
   box-shadow: 0px 0px 15px 1px #0d6efd;
-}
+} */
 
 .admin_page .back_to_home {
   margin-top: -140px;
