--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3765,7 +3765,7 @@ button.btn-custom-time-slot:visited {
 
 /* Style Status */
 
-.switch-button {
+/* .switch-button {
   background: #d5d5ff;
   border-radius: 30px;
   overflow: hidden;
@@ -3830,4 +3830,4 @@ button.btn-custom-time-slot:visited {
 
 .switch-button-label-span {
   position: relative;
-}
+} */
