--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3831,3 +3831,56 @@ button.btn-custom-time-slot:visited {
 .switch-button-label-span {
   position: relative;
 } */
+
+/* Specialities Style */
+
+.browse-widget > img {
+  border-radius: 10px;
+  width: 100%;
+}
+.browse-widget .overlay {
+  position: absolute;
+  top: 0;
+  background-color: #022e60;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.browse-widget:hover .overlay {
+  background-color: rgba(36, 36, 36, 0.5);
+}
+.browse-widget .overlay h3 {
+  font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+}
+.browse-widget .overlay .arrows {
+  position: absolute;
+  bottom: -15px;
+  background-color: #0ce0ff;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.browse-widget .overlay .arrows i {
+  color: #fff;
+}
+.browse-widget:hover .arrows {
+  transform: translate(0, -320%);
+  background-color: #fff;
+}
+.browse-widget:hover .arrows i {
+  color: #1c5b90;
+}
