--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -5450,7 +5450,7 @@ body .multi-optn {
 .browse-widget .overlay {
   position: absolute;
   top: 0;
-  background-color: rgba(34, 100, 197, 0.8);
+  background-color: #022e60;
   width: 100%;
   height: 100%;
   padding: 10px;
