--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3905,3 +3905,57 @@ button.btn-custom-time-slot:visited {
     width: 100vw !important;
   }
 }
+
+/* .dashboard-card {
+  background: blue;
+} */
+
+/* .dashboard-welcome-text {
+  background: linear-gradient(20deg, #75042c, transparent);
+  padding-top: 15px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  color: white;
+  margin-bottom: 30px;
+}
+
+.dashboard-card-icon i {
+  padding: 20px;
+  background-color: #ff000042;
+  border-radius: 100%;
+  color: red;
+} */
+
+.patient-dashboard-top {
+  margin: 20px 0 30px 0;
+}
+
+.dashboard-card {
+  border: 1px solid #efefef;
+  padding: 15px;
+  background-color: white;
+  box-shadow: 0px 0px 7px 1px #d5d4d4;
+  border-radius: 5px;
+  border-bottom: 3px solid #4661ff;
+}
+
+.dashboard-card-icon i {
+  font-size: 26px;
+  color: #fff;
+  border-radius: 10px;
+  background-color: #4661ff;
+  padding: 20px;
+}
+
+.dashboard-card-number {
+  margin-top: 20px;
+  margin-bottom: -18px;
+}
+
+.dashboard-card-number p {
+  font-size: 35px;
+}
+
+.dashboard-card-title p {
+  font-size: 18px;
+}
