--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3475,10 +3475,10 @@ button.btn-custom-time-slot:visited {
 
 /* Footer */
 
-.footer {
+/* .footer {
   background-color: #15558d;
   padding-top: 10px;
-}
+} */
 
 @media screen and (width: 360px) {
   .footer {
@@ -3977,4 +3977,62 @@ button.btn-custom-time-slot:visited {
 
 .doctor-assessments-form-title {
   background-color: #15558d;
+}
+
+/* Profile Dropdown Btn */
+.profile-hover-dropbtn {
+  background-color: transparent;
+  /* color: white; */
+  padding: 16px;
+  /* font-size: 16px; */
+  border: none;
+}
+
+.profile-hover-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.profile-hover-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  margin-left: -152px;
+}
+
+.profile-hover-dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.profile-hover-dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.profile-hover-dropdown:hover .profile-hover-dropdown-content {
+  display: block;
+}
+
+/* Back To Top Button */
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 25px;
+  background: #000;
+  color: white;
+  cursor: pointer;
+  border-radius: 100px;
+  border: none;
+  box-shadow: 0 5px 10px #ccc;
+  padding: 10px 20px 10px 20px;
+}
+
+.back-to-top:hover {
+  background: #1860ca;
 }
