--- a/public/user_assets/css/style.css
+++ b/public/user_assets/css/style.css
@@ -2327,9 +2327,9 @@ button.bg-danger:hover {
 html.menu-opened body {
   overflow: hidden;
 }
-.footer {
+/* .footer {
   background-color: #15558d;
-}
+} */
 .footer .footer-top {
   padding: 40px 0;
 }
@@ -3472,7 +3472,7 @@ html.menu-opened body {
 }
 .section-specialities {
   background-color: #fff;
-  padding: 80px 0;
+  padding: 20px 0 80px 0;
 }
 .section-category {
   background-color: #fff;
