--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -740,7 +740,7 @@ html::-webkit-scrollbar-thumb:active {
   }
 }
 
-.content .card .card-body .doctor-widget .doc-info-left .clinic-services span {
+.clinic-services span {
   border: 1px solid #0077ff;
   border-radius: 4px;
   display: inline-block;
