--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4235,4 +4235,105 @@ table.rehab-com-table {
   color: white;
 }
 
+.diag-test-card-title {
+  position: relative;
+  padding-bottom: 10px;
+}
+
+.diag-test-card-title::before {
+  content: "";
+  position: absolute;
+  height: 0.25rem;
+  width: 3.125rem;
+  bottom: 0;
+  left: 50%;
+  background-color: #427cc5;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: 2;
+}
+
+.process-box-1 {
+  position: relative;
+  text-align: center;
+}
+
+.process-box-header {
+  position: relative;
+  padding-bottom: 1.875rem;
+}
+
+.first .process-box-header::after {
+  left: 0;
+  right: initial;
+  content: "";
+  position: absolute;
+  bottom: -0.625rem;
+  height: 1.25rem;
+  width: 1.25rem;
+  border: 2px solid #e5e5e5;
+  background-color: #fff;
+  border-radius: 50%;
+  z-index: 5;
+  transform: translateX(-50%);
+}
+
+.last .process-box-header::after {
+  content: "";
+  position: absolute;
+  bottom: -0.625rem;
+  right: -0.625rem;
+  height: 1.25rem;
+  width: 1.25rem;
+  border: 2px solid #e5e5e5;
+  background-color: #fff;
+  border-radius: 50%;
+  z-index: 5;
+  transform: translateX(-50%);
+}
+
+i.icon {
+  transition: 350ms ease all;
+  color: #427cc5;
+  font-size: 2.125rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  height: 2.8125rem;
+  width: 2.8125rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+
+.process-box-body {
+  position: relative;
+  padding: 2.1875rem 1.25rem 0 1.25rem;
+  border-top: 2px dashed #e5e5e5;
+}
+
+.process-box-body::before {
+  content: " ";
+  position: absolute;
+  top: -0.313rem;
+  left: 50%;
+  height: 0.625rem;
+  width: 0.625rem;
+  background-color: #427cc5;
+  border-radius: 50%;
+  transform: translateX(-50%);
+}
+.process-box-body::after {
+  content: " ";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0.375rem 0 0.375rem 0.65rem;
+  border-color: transparent transparent transparent #e5e5e5;
+  top: -0.438rem;
+  right: -0.5rem;
+  transform: translateX(-50%);
+}
+
 /* Diagnostics Stylesheet End Here */
